--- a/trunk/CHANGES.txt
+++ b/trunk/CHANGES.txt
@@ -1,9 +1,15 @@
-2007.01.31
-----------
-Initial version
-Use MatplotLib and Scipy (Can be compiled using PyInstaller with some hacks - See the Built_pyPulsar_EXE.cmd)
+2007.02.03 (rev.25)
+-------------------
+-Added 'TwoNuclei.pul' demo file
+-Cleaning of the 'Simple.pul' demo file.
+-FIXED: Bug with the parameter Aliasing that was not properly initialised to False 
+-FIXED: when filename contains \t or \n : e.g., "Pulsar\trunk\Workspace" is interpreted as "Pulsar {TAB} runk\Workspace"). 
 
-in 2006
----------------
-To make this f2py working with LF95 5.6 on window, I had to modified the libc to libcmodified.lib (removing some conflicting objects using LM (library manager).
+2007.02.01 (rev.24)
+-------------------
+Initial version for realise candidate 0.1.RC1
+
+-Use MatplotLib and Scipy (Can be compiled using PyInstaller with some hacks - See the Built_pyPulsar_EXE.cmd)
+
+-To make this f2py working with LF95 5.6 on window, I had to modified the libc to libcmodified.lib (removing some conflicting objects using LM (library manager).
 
