--- a/trunk/CHANGES.txt
+++ b/trunk/CHANGES.txt
@@ -1,3 +1,13 @@
+2007.02.08
+----------
+Modified About Dialog
+Added DEBUG informations
+FIXED: Bug #.....Error in the menu File/New.
+
+2007.02.07
+----------
+FIXED: Bug #10269(crash when simulating several times the same spectra)
+
 2007.02.06
 ----------
 Changed set_frequency to set_proton_frequency
